--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@react-native-community/async-storage": "^1.6.2",
+    "@types/validatorjs": "^3.15.0",
     "axios": "^0.19.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
@@ -15,9 +18,10 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
-    "react-navigation": "^4.0.5",
-    "react-navigation-drawer": "^2.2.1",
-    "react-navigation-stack": "^1.7.3"
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-stack": "^1.9.1",
+    "validatorjs": "^3.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
@@ -30,6 +34,7 @@
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
     "metro-react-native-babel-preset": "0.54.1",
+    "react-devtools": "^3.6.3",
     "react-test-renderer": "16.8.6",
     "typescript": "^3.6.3"
   },
